[gd_scene load_steps=4 format=3 uid="uid://d2mjxku8bnm0o"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="1_7wfdh"]
[ext_resource type="Script" path="res://panels/NetworkConnection/NetworkConnection.gd" id="2_1ybn8"]
[ext_resource type="Texture2D" uid="uid://bhl73t2e0jcwn" path="res://assets/icons/close.svg" id="3_anlr3"]

[node name="NetworkConnection" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_7wfdh")
script = ExtResource("2_1ybn8")

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="Close" type="Button" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -16.0
offset_bottom = 14.0
grow_horizontal = 0
icon = ExtResource("3_anlr3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(194.13, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Status" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Connected"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="IpAddr" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Server IP"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Connect" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect"

[node name="Disconnect" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Disconnect"

[connection signal="pressed" from="Control/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
